[project]
name = "notd"
version = "0.1.0"
description = "nix overlay target determinator"
readme = "README.md"
authors = [
  {name = "Janik Haag", email = "janik@aq0.de"},
]
requires-python = ">=3.13"
dependencies = [
    "nixeval>=0.1.1",
]
[project.scripts]
notd = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./."]

